--- a/menu.css
+++ b/menu.css
@@ -311,6 +311,15 @@ body.menu-screen {
     cursor: grab;
 }
 
+.playfield__fog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
 .playfield.is-dragging {
     cursor: grabbing;
 }
